# Shelf

./: .gitignore  CONTRIBUTING.md  IMPLEMENTATION_REPORT.txt  LICENSE  README.md  REVIEW_2026-06-13.txt  SECURITY.md  bugs review 5.txt  install.sh
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
backend/: .env.example  .gitignore  alembic.ini  cleanup_deep_review.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_init.py  0002_source_render_js.py  0003_reading_paragraph.py  0004_work_expected.py  0005_kindle_email.py  0006_delivery_config.py  0007_local_folder_and_index.py  0008_auth_users.py  0009_catalog_works.py  0010_work_update_tracker.py  0011_crawl_policy.py  0012_integrations.py  0013_index_retry_backoff.py  0014_web_index_budget_recover.py  0015_per_user_library.py  0016_phase3_automation.py  0017_bookshelf_goodreads_shelf.py  0018_source_config.py  0019_work_crawl_paused.py  0020_catalog_discovery.py  0021_download_jobs.py  0022_shelf_path_monitoring.py  0023_fetch_verify.py  0024_unique_race_constraints.py  0025_work_content_hash.py  0026_request_stats.py  0027_request_stats_outcome.py  0028_notifications.py  0029_indexed_page_validators.py  0030_self_registration.py  0031_missing_content_ledger.py  0032_cover_url_partial_index.py  0033_chapter_content_raw_checksum.py  0034_work_source_search.py  0035_vt_submissions.py  0036_content_request_origin.py  0037_subscriptions.py  0038_content_request_planned_rescan.py  0039_index_site_media_kinds.py  0040_work_series_id.py  (+3 more)
backend/app/: __main__.py  auth.py  backup.py  backups_store.py  cache.py  cli.py  config.py  config_store.py  covers.py  db.py  epub_export.py  imagecache.py  kindle.py  library.py  main.py  media.py  models.py  notifications.py  notify.py  permissions.py  safety.py  sanitize.py  schemas.py  sdnotify.py  seed.py  static_auth.py  storage.py  telemetry.py  textutil.py
backend/app/ingestion/: acquire.py  base.py  blocklist.py  book_catalog.py  broken.py  browser.py  catalog.py  catalog_enrichment.py  catalog_groups.py  catalog_junk.py  cf_browser.py  challenge.py  comix_browser.py  comix_catalog.py  companion.py  convert.py  crawl_tuning.py  dedup.py  descramble.py  diagnose.py  downloads.py  engine.py  extract.py  fetcher.py  flaresolverr.py  fuzzy.py  import_core.py  index_admin.py  indexer.py  language.py  ledger.py  libgen.py  librivox.py  list_import.py  local_folder.py  match_audit.py  matchmeta.py  media.py  netguard.py  operator_identity.py  (+15 more)
backend/app/ingestion/adapters/: __init__.py  _mdtext.py  comix.py  generic_feed.py  gutenberg.py  jnovel.py  local_folder.py  local_import.py  mangadex.py  memory.py  royalroad.py  standardebooks.py  web_index.py
backend/app/integrations/: __init__.py  audiobookshelf.py  base.py  cloudflare.py  kapowarr.py  metadata.py  metadata_sync.py  provider_catalog.py  prowlarr.py  qbittorrent.py  ratelimit.py  readarr.py  sabnzbd.py  storyteller.py  sync.py  virustotal.py
backend/app/routers/: absapi.py  auth.py  backup.py  bookshelves.py  chapters.py  delivery.py  goodreads.py  health.py  imgproxy.py  index.py  integrations.py  issues.py  jobs.py  list_imports.py  local_folders.py  metadata.py  missing.py  notifications.py  reading.py  settings.py  sources.py  stock.py  subscriptions.py  wanted.py  works.py
backend/scripts/: backtest_matching.py  dedup_catalog_normkeys.py  match_audit_scan.py  scan_corrupt_media.py  torrent_match_verify.py  torrent_search_probe.py
backend/scripts/archive/: cleanup_web_index_series_mismatch.py  relink_library.py
backend/tests/: conftest.py  test_absapi.py  test_acquire.py  test_anilist_category.py  test_archive_safety.py  test_audio.py  test_audio_download.py  test_audiobook.py  test_audiobook_cover_reuse.py  test_audiobook_ledger.py  test_audiobook_pairing.py  test_auth.py  test_backup.py  test_blocklist.py  test_book_catalog.py  test_broken.py  test_budget_recover.py  test_catalog.py  test_catalog_junk.py  test_catalog_local.py  test_catalog_reconcile.py  test_cf_escalation.py  test_challenge.py  test_cli.py  test_cloudflare.py  test_comic_and_sites.py  test_comix_and_diagnostics.py  test_companion_integrations.py  test_companion_pull.py  test_companion_push.py  test_config_store.py  test_content_languages.py  test_convert.py  test_convert_integration.py  test_cover_backfill_ol.py  test_cover_backoff.py  test_crawl_completion.py  test_crawl_independence.py  test_crawl_tuning.py  test_db_snapshot_restore.py  (+103 more)
deploy/: cloudflare-tunnel.md  cloudflared-config.example.yml  shelf.service
docs/: APP_REVAMP_PLAN_2026-06-25.md  AUTONOMOUS_RUN_STATE.md  DEDUP_STRUCTURAL_PLAN_2026-06-21.md  DEEP_REVIEW_2026-06-21.md  DEEP_REVIEW_2026-06-25.md  FRONTEND_REDESIGN_FIXES_PLAN_2026-06-24.md  FRONTEND_UX_REVIEW_2026-06-21.md  MATCHING_FIX_PLAN_2026-06-16.md  PIPELINE_OVERHAUL_PLAN_2026-06-20.md  REVIEW_2026-06-15.md  REVIEW_FIX_PLAN_2026-06-18.md  UI_UNIFICATION_REQUIREMENTS_2026-06-16.md  VERIFICATION_LOG_2026-06-16.md  WANTED_REDESIGN_SPEC_2026-06-20.md  WAVE_A_SPEC_2026-06-20.md  WAVE_B_SPEC_2026-06-20.md  WAVE_C_SPEC_2026-06-20.md  WAVE_D_SPEC_2026-06-20.md  WAVE_E_SPEC_2026-06-20.md  repo-configuration.md  uuid-migration-plan.md
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  vite.config.ts
scripts/: package.sh
(+106 files in other folders)
