[project]
name = "shelf-backend"
version = "0.1.0"
description = "Shelf — a self-hosted light-novel / long-form fiction reader with a polite, pluggable ingestion engine."
# Real floor is 3.11 (we use datetime.UTC); no 3.12-only features are used.
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.2",
    "feedparser>=6.0",
    "ebooklib>=0.18",
    "apscheduler>=3.10",
    "alembic>=1.13",
    "python-multipart>=0.0.9",
    "watchdog>=4.0",
    "pypdf>=4.0",
]

[project.scripts]
shelfcli = "app.cli:main"

[project.optional-dependencies]
# Headless-browser rendering for JS-heavy sources (per-source render_js). Optional:
# the app runs fine without it — only render_js ingestion needs it. After installing
# this extra, also run `playwright install chromium`.
render = [
    "playwright>=1.40",
]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
]
# CBR (RAR comic archives) need rarfile + an unrar/unar binary at runtime; CBZ uses stdlib zipfile.
rar = ["rarfile>=4.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# B008: FastAPI's Depends() in argument defaults is the framework's idiom.
ignore = ["B008"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
